--- a/king/templates/index.html
+++ b/king/templates/index.html
@@ -123,7 +123,7 @@
                   <div class="modal-body__text">
                     <div class="modal-body__text-list">내 위치 허용 후, 
                       <br/>
-                      근처 확진자 방문지역과 진료소 확인하기</div>
+                      근처 확진자 방문지역과 진료소 확인!</div>
                     <div class="modal-body__text-list list-center">내 목적지 근처로 확인하기</div>
                     <div class="modal-body__text-list">코로나 팩트만을 모아놓은 Q & A 확인!</div>
                   </div>
@@ -311,7 +311,9 @@
             var level = map.getLevel();
             
             // 지도를 1레벨 내립니다 (지도가 확대됩니다)
-            map.setLevel(5);
+            if (level <= 5) {
+                map.setLevel(5);
+            }
 
             var coffeeMenu = document.getElementById('def1');
             var storeMenu = document.getElementById('hosp1');
