marker 없애기, searchOverlay 추가, 지도 확대

--- a/king/templates/index.html
+++ b/king/templates/index.html
@@ -377,6 +377,14 @@
             setCoffeeOverlays(null);
         }
 
+        var searchOverLays = [];
+        
+        function closeSearchOverLay(){
+            for(let i=0; i<searchOverLays.length; i++){
+              searchOverLays[i].setMap(null);
+            }
+        }
+
         </script>
         <script type="text/javascript" src="{% static '/js/modal.js' %}"></script>
         <script type="text/javascript" src="{% static '/js/alert.js' %}"></script>
