--- a/static/css/home.css
+++ b/static/css/home.css
@@ -298,19 +298,30 @@ body {
 }
 .smallicons {
   position: relative;
-  top: 8px;
+  top: 18px;
+  left : -21px;
   width: 15px;
   height: 15px;
+
+}
+.phone {
+  background-image: url(../img/phone.png);
+  background-size: 100%;
+}
+
+.pin{
+  background-image: url(../img/pin.png);
+  background-size: 100%;
 }
 .menu_selected {
   opacity: 0.3;
 }
-.wrap {font-family: NanumGothic; position: absolute;left: 32px;bottom: 40px;width: 230px;height: 110px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
+.wrap {font-family: NanumGothic; position: absolute;left: 32px;bottom: 40px;min-width: 200px;height: 110px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
 .wrap * {padding: 0;margin: 0;}
-.wrap .info {width: 230px;height: 100px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
+.wrap .info {height: 100px;border-radius: 5px;border-bottom: 2px solid #ccc;border-right: 1px solid #ccc;overflow: hidden;background: #fff;}
 .wrap .info:nth-child(1) {border: 0;box-shadow: 0px 1px 2px #888;}
-.info .title {padding: 6px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold;}
-.info .close {position: absolute;top: 10px;right: 10px;color: #888;width: 17px;height: 17px;background: url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');}
+.info .title {display :flex; align-items : center; padding: 6px 0 0 10px;height: 30px;background: #eee;border-bottom: 1px solid #ddd;font-size: 18px;font-weight: bold; justify-content: space-between;}
+.info .close {color: #888;width: 17px;height: 17px;background: url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png'); margin-left: 10px; margin-right: 5px;}
 .info .close:hover {cursor: pointer;}
 .info .body {position: relative;overflow: hidden;}
 .info .desc {position: relative;margin: 6px 0 0 13px;height: 75px;}
@@ -319,3 +330,4 @@ body {
 .info .img {position: absolute;top: 6px;left: 5px;width: 73px;height: 71px;border: 1px solid #ddd;color: #888;overflow: hidden;}
 .info:after {content: '';position: absolute;margin-left: -12px;left: 50%;bottom: 0;width: 22px;height: 12px;background: url('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
 .info .link {text-decoration: none; font-family: NanumGothic; position: relative; top: 4px; color: #e55454;}
+
