modal-css/likelion-comment

--- a/king/templates/index.html
+++ b/king/templates/index.html
@@ -56,8 +56,9 @@
                         <div class="contact-dev">Contact</div>
                         <div class="menu-info">withjuwon@gmail.com</div>
                         <div class="contact-dev">개발자</div>
-                        <div class="menu-likelion">고려대학교 멋쟁이사자처럼 팀</div>
+                        <div class="menu-likelion">고려대학교 멋쟁이사자처럼 출신</div>
                         <div class="menu-info">김준태 박지환 이인우 최주원</div>
+                        <div class="menu-server">서버 비용 후원 : 멋쟁이사자처럼</div>
                     </ul>
                 </nav>
 
@@ -124,9 +125,9 @@
                   <div class="modal-body__text">
                     <div class="modal-body__text-list">내 위치 허용 후, 
                       <br/>
-                      근처 확진자 방문지역과 진료소 확인!</div>
+                      내 근처 확진자 방문지역과 진료소 확인!</div>
                     <div class="modal-body__text-list list-center">내 목적지 근처로 확인하기</div>
-                    <div class="modal-body__text-list">코로나 팩트만을 모아놓은 Q & A 확인!</div>
+                    <div class="modal-body__text-list">사이드 메뉴에서 확진자수와 사망자수 확인하기!</div>
                   </div>
                 </div>
               </div>
