--- a/static/css/home.css
+++ b/static/css/home.css
@@ -179,9 +179,9 @@
   color: white;
   -webkit-text-fill-color: white;
   text-align: right;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  font-size: 13px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  font-size: 12px;
 }
 
 @media (max-width: 768px) {
@@ -221,6 +221,14 @@
 .menu-info {
   font-family: NanumGothic;
   margin-top: 3px;
+  font-size: 12px;
+  font-weight: bold;
+  color: white;
+  text-align: right;
+}
+.menu-server {
+  font-family: NanumGothic;
+  margin-top: 100px;
   font-size: 12px;
   color: white;
   text-align: right;
@@ -328,17 +336,16 @@ body {
 .smallicons {
   position: relative;
   top: 18px;
-  left : -21px;
+  left: -21px;
   width: 15px;
   height: 15px;
-
 }
 .phone {
   background-image: url(../img/phone.png);
   background-size: 100%;
 }
 
-.pin{
+.pin {
   background-image: url(../img/pin.png);
   background-size: 100%;
 }
