--- a/static/css/home.css
+++ b/static/css/home.css
@@ -366,9 +366,8 @@ body {
   font-weight: bold;
 }
 .info .close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   color: #888;
   width: 17px;
   height: 17px;
