--- a/king/templates/index.html
+++ b/king/templates/index.html
@@ -18,13 +18,17 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>코로나 알리미</title>
         <link href="{% static '/css/normalize.css' %}" rel="stylesheet" type="text/css">
-        <link href="{% static '/css/home.css' %}?type=1" rel="stylesheet" type="text/css">
+        <link href="{% static '/css/home.css' %}?type=12" rel="stylesheet" type="text/css">
         <link href="{% static '/css/common.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static '/css/modal.css' %}?type=5" rel="stylesheet" type="text/css">
 
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800&display=swap" rel="stylesheet">
     </head>
-
+    <style>
+    .close {
+      background:url('{% static 'img/overclose.png' %}');
+    }
+    </style>
     <body>
         <!-- <div id="map" style="width:100%;height:1000px;"></div> -->
         
@@ -272,7 +276,7 @@
                               '            <div class="desc">' + 
                               '                <div class="ellipsis">' + storePositions[i].roadaddr + '</div>' + 
                               '<div class="telroad" style="display: flex; flex-direction: row; justify-content: space-around; position: relative; right: 4px; bottom: 5px;">' +
-                              '                <div><div class="smallicons phone"></div><a href="tel:' + storePositions[i].phone + '" target="_blank" class="link">전화걸기</a></div>' + 
+                              '                <div><div class="smallicons phone"></div><a href="tel:' + storePositions[i].phone + '" class="link">전화걸기</a></div>' + 
                               '                <div><div class="smallicons pin"></div><a href="https://map.kakao.com/link/to/' + storePositions[i].content + ',' + storePositions[i].position_y + ',' + storePositions[i].position_x +'" class="link">길찾기</div>' +
                               '</div>' +
                               '            </div>' + 
