--- a/king/templates/index.html
+++ b/king/templates/index.html
@@ -14,7 +14,7 @@
         {% load static %}
         <meta property="og:image" content="{% static '/img/lala.png' %}" />
         <meta charset="utf-8">
-        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>코로나 알리미</title>
         <link href="{% static '/css/normalize.css' %}" rel="stylesheet" type="text/css">
